# neuracrawl-tuner

./: .gitignore  README.md
neuracrawl-tuner-app/icon.icon/: icon.json
neuracrawl-tuner-app/neuracrawl-tuner/: Models.swift  SourceSelectorWindow.swift  SourceViewerWindow.swift  WebView.swift  neuracrawl_tunerApp.swift
neuracrawl-tuner-app/neuracrawl-tuner.xcodeproj/: project.pbxproj
neuracrawl-tuner-app/neuracrawl-tuner.xcodeproj/project.xcworkspace/xcuserdata/juliushuck.xcuserdatad/: UserInterfaceState.xcuserstate
neuracrawl-tuner-app/neuracrawl-tuner.xcodeproj/xcshareddata/xcschemes/: neuracrawl-tuner.xcscheme
neuracrawl-tuner-app/neuracrawl-tuner.xcodeproj/xcuserdata/juliushuck.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
neuracrawl-tuner-app/neuracrawl-tuner.xcodeproj/xcuserdata/juliushuck.xcuserdatad/xcschemes/: xcschememanagement.plist
neuracrawl-tuner-app/neuracrawl-tuner/Assets.xcassets/AppIcon.appiconset/: Contents.json
neuracrawl-tuner-logic/: neuracrawl_tuner.ipynb  neuracrawl_tuner_lib.py  pyproject.toml
