[project]
name = "neuracrawl-tuner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "crawl4ai>=0.7.7",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "langchain>=1.0.8",
    "langchain-openai>=1.0.3",
    "pydantic>=2.12.4",
]
