[project]
name = "neuracrawl-tuner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "crawl4ai>=0.7.7",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "langchain>=1.0.8",
    "langchain-google-genai>=2.1.0",
    "markdowncleaner>=0.3.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.0.0",
]
